# atmosrt

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
atmosrt/: _rtm.py  sbdart.py  settings.py
src/sbdart/: all.f  atms.f  libsbdartmodule.c
test/: test_basic.py
